--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,10 +1,9 @@
 site_name: Allegro REST API Design Guidelines
 theme: readthedocs
-docs_dir: ./
+docs_dir: ./docs
 
 nav:
 - index: 'index.md'
-- All in one: 'README.md'
 - Design Guidelines: 'DesignGuidelines.md'
 - Section:
     - 'Resource': 'Resource.md'
