--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,6 @@
 site_name: Allegro REST API Design Guidelines
 theme: readthedocs
+docs_dir: ./docs
 
 nav:
 - Allegro REST API Design Guidelines: 'README.md'
