--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -1,21 +1,22 @@
-name: Deploy edge-docs to Github Pages
-
+name: deploy docs
 on:
   push:
-    branches: [ master ]
-    paths: ['docs/**']
-  workflow_dispatch:
-
+    branches:
+      - master
+      - main
+permissions:
+  contents: write
 jobs:
   deploy:
-    runs-on: [self-hosted, linux, 8gb]
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
         with:
-          python-version: 3.9
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          python-version: 3.x
+      - uses: actions/cache@v2
+        with:
+          key: ${{ github.ref }}
+          path: .cache
+      - run: pip install mkdocs-material
       - run: mkdocs gh-deploy --force
