--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,4 +3,12 @@ theme: material
 docs_dir: ./docs
 
 nav:
-- Allegro REST API Design Guidelines: 'README.md'
+- Allegro REST API Design Guidelines: 'Allegro REST API Design Guidelines.md'
+- Contents: 'Contents.md'
+- Resource: 'Resource.md'
+- Representation: 'Representation.md'
+- Error: 'Error.md'
+- Command pattern: 'Command pattern.md'
+- Documentation: 'Documentation.md'
+- Glossary: 'Glossary.md'
+- HATEOAS: 'HATEOAS.md'
