--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,11 @@
 site_name: Allegro REST API Design Guidelines
-theme: material
+theme:
+  name: material
+  palette:
+      - scheme: default
+        primary: 'deep orange'
+        accent: 'indigo'
+
 docs_dir: ./docs
 
 nav:
