--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -7,8 +7,27 @@ on:
 permissions:
   contents: write
 jobs:
+  split-files:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: 3.x
+      - run: pip install mdsplit
+      - run: rm -r docs
+      - run: mdsplit README.md -o docs
+      - run: mv 'docs/Allegro REST API Design Guidelines.md' 'docs/index.md'
+      - name: Commit & Push changes
+        uses: actions-js/push@master
+        with:
+          message: 'Regenerate documents'
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+
+
   deploy:
     runs-on: ubuntu-latest
+    needs: split-files
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
