--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -38,5 +38,6 @@ jobs:
         with:
           key: ${{ github.ref }}
           path: .cache
+      - run: git pull
       - run: pip install mkdocs-material
       - run: mkdocs gh-deploy --force
