--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,19 +1,17 @@
 site_name: Allegro REST API Design Guidelines
 theme:
   name: material
-  palette:
-      - scheme: default
-        primary: 'deep orange'
-        accent: 'indigo'
+  extra_css:
+    - style.css
 
 docs_dir: ./docs
 
 nav:
-- Introduction: 'index.md'
-- Resource: 'Resource.md'
-- Representation: 'Representation.md'
-- Error: 'Error.md'
-- Command pattern: 'Command pattern.md'
-- Documentation: 'Documentation.md'
-- Glossary: 'Glossary.md'
-- HATEOAS: 'HATEOAS.md'
+  - Introduction: 'index.md'
+  - Resource: 'Resource.md'
+  - Representation: 'Representation.md'
+  - Error: 'Error.md'
+  - Command pattern: 'Command pattern.md'
+  - Documentation: 'Documentation.md'
+  - Glossary: 'Glossary.md'
+  - HATEOAS: 'HATEOAS.md'
